--- a/index.html
+++ b/index.html
@@ -1078,6 +1078,10 @@
                     target="_blank" data-position="top" data-tooltip="View Source"
                     class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
                       class="mdi-av-my-library-books small"></i></a>
+		  <a aria-label="Visit the page for video" href="https://youtu.be/p0zb9K8UaTs"
+                    target="_blank" data-position="top" data-tooltip="View Source"
+                    class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i
+                      class="mdi-action-assessment small"></i></a>
                 </div>
               </div>
             </div>
