--- a/index.html
+++ b/index.html
@@ -292,6 +292,42 @@
       <div class="container">
 
         <!-- Latest Experience -->
+	<div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
+                <a href="http://www.uta.edu/" target="_blank"><img alt="BOFA logo"
+                    src="/assets/img/bofa.png" class="responsive-img center-block" /></a>
+              </div>
+              <!-- <div class="col s12 m10"> -->
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="http://www.uta.edu" target="_blank"
+                      class="teal-text hoverline">Bank of America</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">Data Science (Capstone)</div>
+            <ul>
+              <li>
+                Capstone project for University of Texas at Arlington (With Bank of America</li>
+              <li>
+                The topic was "Testing LLM Models" in which the purpose of the project was to determine whether a
+particular text given as input is human or machine generated, for which we generated and created a clean
+dataset from scratch with human and machine generated inputs and trained ML models to develop and
+new detector like GPTZero and made in-depth analysis on the comparison of human vs AI-generated
+content.</li>
+              <li>
+                <b>Skills:</b>Large Language Models (LLM), Pattern Recognition, Databases, Predictive Modeling, Project Management, Data Analysis, Data Mining, Data Visualization, Artificial Intelligence (AI).
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>Sept 2023 - Dec 2023 | Arlington, Texas</span>
+          </div>
+        </div>
+
+	      
         <div class="card">
           <div class="card-content">
             <div class="row">
